welcome.lessons.welcome.methods.args.MethodsArgs.scala.error
Program:2: error: Missing closing brace `}' assumed here
move(nbPas: Int,versLAvant: Boolean) {
^Program:2: error: expected class or object definition
move(nbPas: Int,versLAvant: Boolean) {
^